--- a/near-relevance/templates/result/index.html
+++ b/near-relevance/templates/result/index.html
@@ -1,58 +1,61 @@
-{% extends 'base.html' %}
-
-{% block header %}
-  <h2>{% block title %}Get Prediction{% endblock %}</h2>
-{% endblock %}
-
-{% block content %}
+{% extends 'base.html' %} {% block header %} {% block title %}{% endblock %} {% endblock %} {% block content %}
 <form method="post">
-    <div class="card">
-        <h3><label for="model">Model</label></h3>
-      <div class="card-body">
+  <div class="card">
+    <div class="card-body">
+      <h4>
+        <label for="headline">Input Headline:</label>
+
+        <textarea style="background-color:whitesmoke" rows="2" col="500" name="headline" id="headline">{{ request.form['headline'] }} insert headline here</textarea>
+        <label for="model">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Select
+          Model: </label>
+
         <select id="model" name="model" required>
 
-                {% for model in models %}
-            
-                <option value="{{ model['model_name'] }}">{{ model['model_name'] }}</option>
-                
-                {% endfor %}
+          {% for model in models %}
+
+          <option value="{{ model['model_name'] }}">{{ model['model_name'] }}</option>
+
+          {% endfor %}
 
         </select>
-      
-
-    <h3><label for="headline">Headline</label></h3>
-    <textarea name="headline" id="headline">{{ request.form['headline'] }}</textarea>
-
-    <input type="submit" value="Predict">
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <input type="submit" value="Predict Relevance" style="background-color:whitesmoke">
+      </h4>
+    </div>
   </div>
-</div>
-  </form>
+</form>
 
 <div>
-<h2>Results</h2>
-<form action="{{ url_for('result.clear_results') }}" method="post">
+  <h3>
+    <center>Results</h3>
+  <form action="{{ url_for('result.clear_results') }}" method="post">
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <input class="danger" type="submit" value="Clear Results" onclick="return confirm('Are you sure?');">
-</form>
-          <table class="table table-striped">
-              <thead>
-                  <tr>
-                    <th scope="col">Model</th>
-                    <th scope="col">Headline</th>
-                    <th scope="col">Result</th>
-                  </tr>
-                </thead>
-              <tbody>
-                  {% for post in posts %}
-                  <tr>
-                      <th scope="row">{{ post['model_name'] }}</th>
-                      <td>{{ post['input_text'] }}</td>
-                      <td>{{ post['result'] }} </td>
-                  </tr>
-                    {% if not loop.last %}
-                  {% endif %}
-                  {% endfor %}
-              </tbody>
-          </table>
-    </div>
-{% endblock %}
+    </center>
+  </form>
 
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">Headline</th>
+        <th scope="col">Model</th>
+        <th scope="col">Result</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for post in posts %}
+      <tr>
+        <td>{{ post['input_text'] }}</td>
+        <th scope="row">{{ post['model_name'] }}</th>
+        <td>{{ post['result'] }} </td>
+      </tr>
+      {% if not loop.last %} {% endif %} {% endfor %}
+    </tbody>
+  </table>
+</div>
+{% endblock %}
